--- a/src/assets/my-mint.less
+++ b/src/assets/my-mint.less
@@ -90,6 +90,50 @@
 .van-sku-row__item {
 	border-radius: 21px;
 }
+.van-address-list__add {
+	width: 100%;
+	z-index:600;
+}
+.van-address-edit__buttons{
+	position: absolute;
+	padding: 0;
+	height: 8vh;
+    top: 0px;
+    right: 0
+}
+.van-button--primary {
+	color: #333;
+    background-color: #fff;
+	border: none;
+	// height: 100%;
+	line-height: 8vh;
+}
+.van-switch--on {
+	background-color:#f03d37;
+}
+.van-switch {
+	height: 4vw;
+	width: 9vw;	
+}
+.van-switch__node {
+	width: 4vw;
+    height: 4vw;
+}
+.van-hairline--bottom::after{
+	display: none;
+}
 
-
+.van-sku-header {
+    border-bottom:0.5px solid rgba(185, 185, 185, .34);
+}
+.van-field .van-cell__value {
+	line-height: 40px;
+	input{
+		font-size: 28px;
+	}
+}
+.van-field .van-cell__title {
+	max-width: 30px;
+	font-size: 30px;
+}
 
